# neural_network

./: Activation.cpp  Activation.hh  ActivationFunction.cpp  ActivationFunction.hh  ActivationFunctionType.hh  CMakeLists.txt  Layer.cpp  Layer.hh  Loss.cpp  Loss.hh  LossType.hh  NeuralNetwork.cpp  NeuralNetwork.hh  main.cpp
